frame/support/test/tests/construct_runtime_ui/duplicate_exclude.rs
use frame_support::construct_runtime;

construct_runtime! {
	pub enum Runtime where
		UncheckedExtrinsic = UncheckedExtrinsic,
		Block = Block,
		NodeBlock = Block,
	{
		System: frame_system exclude_parts { Call, Call },
	}
}

fn main() {}
